# aula06jornada

./: .pre-commit-config.yaml  main.py  pyproject.toml
