[tool.poetry]
name = "aula06jornada"
version = "0.1.0"
description = ""
authors = ["João Dorea <84815558+joaopdorea@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
pre-commit = "^3.8.0"
blue = "^0.9.1"
dask = "^2024.8.1"
commitizen = "^3.29.0"
bandit = "^1.7.9"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
